--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,27 @@
 {
-    "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }]
+    "rewrites": [
+        { 
+            "source": "/sitemap.xml",
+            "destination": "/sitemap.xml"
+        },
+        { 
+            "source": "/(.*)", 
+            "destination": "/index.html" 
+        }
+    ],
+    "headers": [
+        {
+            "source": "/sitemap.xml",
+            "headers": [
+                {
+                    "key": "Content-Type",
+                    "value": "application/xml"
+                },
+                {
+                    "key": "Cache-Control",
+                    "value": "public, max-age=3600"
+                }
+            ]
+        }
+    ]
 }
